--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,382 @@
-/* место для вашего кода */
+.header{
+    display: grid;
+    grid-template-columns:repeat(5, 1fr);
+    place-content:center;
+    place-items: center;
+    font-weight: 400;
+    font-size: 18px;
+    color: #000;
+    height: 105px;
+    padding: 92px 24px 96px 24px;
+}
+
+.header_menu{
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    font-weight: 400;
+    font-size: 18px;
+    color: #000;
+    padding-left: 14px;
+}
+
+.header__links-list{
+    display: flex;
+    flex-direction: row;
+    gap: 34px;    
+    list-style-type:circle;
+}
+
+.header__links-list-item_no-bullit{
+    list-style-type: none;
+}
+
+.header__logo{
+    display: block;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    width: 131px;
+}
+
+.header__logo-image{
+    width: 100%;
+}
+
+.address{
+   font-weight: 400;
+   font-style: normal;
+    font-size: 18px;
+    line-height: 135%;
+    color: #000;
+}
+
+.header .address{
+    grid-column-start: 4;
+    grid-column-end: span 2;
+    padding-left: 154px;
+    padding-right: 35px;
+}
+.cover{
+    padding: 0;
+    margin-top: 47px;
+    min-height: 757px;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.overlay{
+    position: absolute;
+    inset: 0;  
+    background: rgb(0, 0, 0, .6);
+    height: 100%;
+    width: 100%;
+}
+
+.cover__title{
+    position: relative;
+    z-index: 1;
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 115%;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.aligned-text{
+    display: block;
+    padding-top: 165px;
+    padding-left: 50px;
+}
+
+.aligned-text_center{
+    display: block;
+    text-align: center;
+    padding-top: 18px;
+}
+
+.aligned-text_right{
+    display: block;
+    text-align: right;
+}
+
+.letter-spacing-extended{
+    letter-spacing: 0.6em;    
+}
+
+.no-letter-spacing{
+    letter-spacing: 0.3em;
+}
+
+.cover__description{
+    position: relative;
+    z-index: 1;
+    display: flex;   
+    gap: 79px;
+    align-items: center;
+    justify-content: center;
+    padding-top: 130px;
+    padding-left: 20px;
+
+}
+
+.cover__description-text{
+    display:block;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 127%;   
+    word-spacing: 19px;    
+    text-transform: uppercase;
+    color: #fff;  
+}
+
+.bet-button{
+    box-sizing: border-box;
+    background: transparent;
+    border: 1px solid #fff;
+    width: 256px;
+    height: 51px;
+    font-weight: 500;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+}
+
+.lots{
+    padding: 179px 24px 0 24px;
+}
+
+.lots__card-list{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    width: 100%;
+    flex-wrap: wrap;
+    max-width: 1052px;    
+}
+
+.lots__card-list-item{
+    flex-basis: 300px;
+	min-height: 563px;
+    flex-grow: 1; 
+    width: 100%;
+}
+
+.lots__heading{
+    padding-left: 40px;
+    padding-bottom: 27px;
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.card-link{
+    display: block;
+    text-decoration: none;  
+}
+
+.card{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 51px 40px 48px 40px;
+    margin-bottom: 30px;
+    width: 334px;
+    height: 563px;
+}
+
+.card_type_film{
+    background-image: url(../images/card-lot-01.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.card_type_book{
+    background-image: url(../images/card-lot-02.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.card_type_picture{
+    background-image: url(../images/card-lot-03.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.card__title{
+    position: relative;
+    z-index: 1;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 120%;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #fff;
+}
+
+.card__text{
+    position: relative;
+    z-index: 1;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #fff;
+}
+
+.lots__look-more-link{
+    padding-left: 40px;
+    font-weight: 400;
+    font-size: 20px;
+    color: #000;
+}
+
+.about{
+    padding: 0 24px;
+    margin-top: 146px;
+    display: grid;
+    grid-template-columns: 330px 1fr;
+    grid-template-rows: 283px 1fr;
+    grid-template-areas: 
+    "logo title"
+    "empty text";
+    height: 595px;
+}
+
+.about__logo{
+    grid-area: logo;
+    margin-top: 35px;
+    width: 240px;
+    height: 240px;
+    background-color: #000;
+    border-radius: 100%;
+    justify-self: center;
+    align-self: center;  
+}
+
+.about__logo-image{
+    display: block;
+    width: 148px;
+    height: 114px;
+    margin-top: 65px;
+    margin-left: 51px;
+    margin-right: 51px;
+    margin-top: 65px;
+}
+
+
+.about__title{
+    grid-area: title;
+    margin-top: 35px;
+    padding-left: 27px;
+    justify-self: start;
+    align-self: center;
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+.about__text{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    grid-area: text;
+    padding-left: 27px;
+    padding-right: 5px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+  /*  letter-spacing: 0.01em;*/
+    color: #000;
+}
+.letter-spacing-extended-01{
+   letter-spacing: 0.01em;
+}
+
+.letter-spacing-shrink-01{
+    letter-spacing: -0.01em;
+ }
+
+.letter-spacing-extended-02{
+    letter-spacing: 0.02em;
+}
+
+.letter-spacing-extended-03{
+    letter-spacing: 0.03em;
+}
+
+.letter-spacing-extended-04{
+    letter-spacing: 0.04em;
+}
+
+.footer{
+    display: flex;
+    height: 98px;
+    width: 980px;
+    padding: 0 50px 88px 50px; 
+    margin-top: 182px;
+    margin-bottom: 88px;
+    gap: 185px;
+}
+
+.footer .address{
+    display: block;
+    min-width: 240px;
+}
+
+.footer__menu{
+    display: block;
+    min-width: 149px;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    color: #000;
+}
+
+.footer__menu-list{
+    text-align: center;
+    list-style-type: none;    
+}
+
+.footer__social-list{
+    display: flex;
+    gap: 48px;
+    list-style-type: none;
+    min-width: 240px;
+}
+
+.footer__menu-link{
+    display: block;    
+}
+
+.footer__menu-link_active{
+    display: block;
+    text-decoration: none;
+}
+
+.footer__social-list-item{
+    display: block;
+    width: 48px;
+    height: 48px;
+}
+
+.footer__social-link{
+    display: block;
+}
+
+.footer__social-icon{
+    width: 100%;
+}
