--- a/styles/style.css
+++ b/styles/style.css
@@ -150,7 +150,7 @@
     border: 1px solid currentColor;
     width: 256px;
     height: 51px;
- /*   font-family: Arial;  в нашем макете щрифт  Ralevay https://disk.yandex.ru/i/RYBZZT-ifFiV1g */
+    font-family: Raleway;
     font-weight: 500;
     font-size: 22px;
     text-transform: uppercase;
